# EnergyPlus-online-plotter

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
docs/agents/: domain.md  issue-tracker.md
docs/prd/: online-plotter.md
src/eplus_plotter/: __init__.py  cli.py  driver.py  idf_outputs.py  locate.py  plot_model.py  ring_buffer.py  sample.py  ui.py
tests/: conftest.py  test_driver.py  test_idf_outputs.py  test_locate.py  test_plot_model.py  test_ring_buffer.py  test_sample.py  test_ui.py
