[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eplus-online-plotter"
version = "0.1.0"
description = "Live time-series plotter for EnergyPlus simulations (driven via the pyenergyplus Runtime API)"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
ui = ["pyqtgraph>=0.13", "PySide6>=6.6"]
dev = ["pytest>=8", "mypy>=1.8"]

[project.scripts]
eplus-plotter = "eplus_plotter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eplus_plotter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "eplus: integration test that drives a real EnergyPlus run (skipped when no install is found)",
]

[tool.mypy]
python_version = "3.13"
files = ["src/eplus_plotter"]
mypy_path = "src"
ignore_missing_imports = true
